gcc/testsuite/gfortran.dg/pr95614_1.f90
@@ -1,0 +1,6 @@
+! { dg-do compile }
+
+module m   ! { dg-error ".1." }
+  common m ! { dg-error "cannot appear in a COMMON" }
+end
+
