gcc/testsuite/gfortran.dg/pr95614_4.f90
@@ -1,0 +1,9 @@
+! { dg-do compile }
+
+function f()
+  f = 1.0
+end function
+
+program pr95614
+  common /c1/ f
+end program
